@@ -1,4 +1,16 @@
 
+Изменения в nginx 1.9.11                                          09.02.2016
+
+    *) Добавление: теперь resolver поддерживает TCP.
+
+    *) Добавление: динамические модули.
+
+    *) Исправление: при использовании HTTP/2 переменная $request_length не
+       учитывала размер заголовков запроса.
+
+    *) Исправление: в модуле ngx_http_v2_module.
+
+
 Изменения в nginx 1.9.10                                          26.01.2016
 
     *) Безопасность: при использовании директивы resolver во время обработки
