@@ -7,6 +7,17 @@
 
 <news name="nginx news" link="/" lang="en">
 
+<event date="2016-02-09">
+<para>
+<link doc="en/download.xml">nginx-1.9.11</link>
+mainline version has been released,
+with
+<link doc="en/docs/ngx_core_module.xml" id="load_module">dynamic modules</link>
+and TCP support in
+<link doc="en/docs/http/ngx_http_core_module.xml" id="resolver">resolver</link>.
+</para>
+</event>
+
 <event date="2016-01-26">
 <para>
 <link doc="en/download.xml">nginx-1.8.1</link>
