@@ -9,6 +9,7 @@
 
 <download tag="mainline" changes="">
 
+<item ver="1.9.11" />
 <item ver="1.9.10" />
 <item ver="1.9.9" />
 <item ver="1.9.8" />
